2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_set_info_from_tags_internal): Always
	update the DATE_TAGS_UPDATED field.
	(meta_data_reader): Likewise.
	(worker_thread): Scan all local files for tags for which
	DATE_TAGS_UPDATED is NULL.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_set_info_from_tags_internal): Always at
	least update the date tags updated field.
	(meta_data_reader): Likewise.
	(worker_thread): Scan files for tags for which date_tags_updated
	is NULL.

2008-11-10  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (struct _MusicDB): Rename meta_data_reader_mutex
	to work_lock and change to a GMutex *.  Add fields worker, exit,
	work_cond, and dirs_pending.  Rename meta_data_reader_pending to
	meta_data_pending.  Update users.  Rename fs_scanner to
	worker_idle.  Update users.  Remove field meta_data_reader.
	(music_db_init): Initialize the thread package.  Initialize
	db->work_lock, db->work_cond, db->meta_data_pending and
	db->dirs_pending.
	(music_db_finalize): Join with the worker thread.  Destroy
	db->work_lock, db->work_cond, db->meta_data_pending and
	db->dirs_pending.
	(music_db_add): If we have added an entry to the queue, signal
	DB->WORK_COND.
	(music_db_add_recursive_internal): Don't call
	g_main_context_iteration.
	(music_db_add_recursive): Don't call
	music_db_add_recursive_internal.  Instead, add PATH to
	DB->DIRS_PENDING and signal DB->WORD_COND.
	(music_db_get_info_internal): New function.
	(music_db_get_info): Implement in terms of it.
	(music_db_set_info_internal): New function.
	(music_db_set_info): Implement in terms of it.
	(music_db_set_info_from_tags_internal): New function.
	(music_db_set_info_from_tags): Implement in terms of it.
	(struct fs_scanner): Rename from this...
	(struct worker): ... to this.  Update users.
	(fs_scanner_thread): Rename from this...
	(worker_thread): ... to this.  Update users.  Enter a loop waiting